# GuidedLDA

./: setup.cfg  setup.py
guidedlda/: _guidedlda.c
