[metadata]
name = guidedlda
version = 2.0
description = Topic modeling with Guided latent Dirichlet allocation
long_description = file: README.rst
author = Vikash Singh
author_email = vikash.duliajan@gmail.com
classifiers = 
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: C
    Programming Language :: Cython
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix

[options]
packages = find:
install_requires = 
    numpy

[options.extras_require]
dev =
    # Add development dependencies here, e.g.
    black
    flake8

[build-system]
requires = 
    setuptools >= 61.0
    wheel
build-backend = setuptools.build_meta

[sdist]
pre_hook.sdist_pre_hook = guidedlda._setup_hooks.sdist_pre_hook

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[upload_sphinx]
upload-dir = docs/build/html